(library
    (name Fzy)
    (public_name Fzy)
    (library_flags (:include flags.sexp))
    (c_flags (:include c_flags.sexp))
    (c_names bindings)
    (inline_tests)
    (preprocess
        (pps ppx_inline_test))
    (cxx_flags (:include cxx_flags.sexp)))

(rule
    (targets c_flags.sexp cxx_flags.sexp flags.sexp)
    (deps (:discover ../config/discover.exe))
    (action (run %{discover})))
